--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  path_provider: ^1.6.5
+  image_picker: ^0.6.3+4
+  wifi_hunter: ^1.0.2
+  http: ^0.12.0+4
+  cloud_firestore: ^0.13.4+2
   flutter:
     sdk: flutter
 
